--- a/app/src/main/res/layout/grid_item_poster.xml
+++ b/app/src/main/res/layout/grid_item_poster.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/grid_item_poster_imageview"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent" />
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:scaleType="fitXY"
+           android:adjustViewBounds="true"/>
